--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "wanchainwalletcore" : "file:../wanchain/wallet/new_wallet/wanchainwalletcore",
         "bignumber.js": "^4.0.1",
+		"promisefy-util": "^1.0.1",
         "bluebird": "^3.5.0",
         "chai-as-promised": "^6.0.0",
         "chai-string": "^1.3.0",
