--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
     "keythereum": "^1.0.2",
     "lodash": "^4.17.4",
     "log-rotate": "^0.2.7",
-    "log4js": "^2.5.3",
+    "log4js": "^2.10.0",
     "lokijs": "^1.4.3",
     "minimongo-standalone": "^1.1.0-3",
+    "moment": "^2.22.2",
     "numeral": "^2.0.6",
     "oboe": "^2.1.3",
     "os-timesync": "^1.0.8",
@@ -46,11 +47,15 @@
     "typescript": "^2.2.2",
     "underscore": "^1.8.3",
     "underscore-deep-extend": "^1.1.5",
+    "util": "^0.11.0",
     "uuid": "^3.0.1",
-    "wanchain-util": "^1.0.3",
-    "wanchain-keystore": "^0.0.1",
     "wanchain-crosschain": "^0.0.9",
+    "wanchain-keystore": "^0.0.1",
+    "wanchain-util": "^1.0.3",
     "web3": "^0.18.4",
+    "winston": "^3.0.0",
+    "winston-daily-rotate-file": "^3.2.3",
+    "winston-syslog": "^2.0.0",
     "yargs": "^7.0.2"
   },
   "devDependencies": {
