--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wanWallet",
+  "name": "wanwallet",
   "version": "2.1.2",
   "license": "GPL-3.0",
   "author": {
@@ -50,6 +50,7 @@
     "util": "^0.11.0",
     "uuid": "^3.0.1",
     "wanchain-crosschain": "^0.1.4",
+    "wanchain-crosschain-btc": "git://github.com/wanchain/wanchain-crosschain.git#wanchain3.0",
     "wanchain-keystore": "^0.0.1",
     "wanchain-util": "^1.0.3",
     "web3": "^0.18.4",
