--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "underscore-deep-extend": "^1.1.5",
     "util": "^0.11.0",
     "uuid": "^3.0.1",
+    "wanchain-crossbtc": "git://github.com/wanchain/wanchain-crosschain.git#wanchain30_beta",
     "wanchain-crosschain": "^0.1.4",
     "wanchain-keystore": "^0.0.1",
     "wanchain-util": "^1.0.3",
