--- a/package.json
+++ b/package.json
@@ -49,9 +49,8 @@
     "underscore-deep-extend": "^1.1.5",
     "util": "^0.11.0",
     "uuid": "^3.0.1",
-    "wanchain-crossbtc": "git://github.com/wanchain/wanchain-crosschain.git#wanchain30_beta",
     "wanchain-crosschain": "^0.1.4",
-    "wanchain-crosschain-btc": "git://github.com/wanchain/wanchain-crosschain.git#wanchain3.0",
+    "wanchain-crosschain-btc": "git://github.com/wanchain/wanchain-crosschain.git#wanchain30_beta",
     "wanchain-keystore": "^0.0.1",
     "wanchain-util": "^1.0.3",
     "web3": "^0.18.4",
