--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "main": "main.js",
   "dependencies": {
     "bignumber.js": "^4.0.1",
+    "bitcoinjs-lib": "^4.0.1",
     "bluebird": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "chai-string": "^1.3.0",
