--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bignumber.js": "^4.0.1",
     "bitcoinjs-lib": "^4.0.1",
     "bluebird": "^3.5.0",
+    "bs58check": "^2.1.2",
     "chai-as-promised": "^6.0.0",
     "chai-string": "^1.3.0",
     "electron-window-state": "^4.0.1",
