--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "underscore-deep-extend": "^1.1.5",
     "util": "^0.11.0",
     "uuid": "^3.0.1",
-    "wanchain-js-sdk":"file:/work_2.1/wanchain-js-sdk",
+    "wanchain-js-sdk":"file:../wanchain-js-sdk",
     "wanchain-keystore": "^0.0.1",
     "wanchain-util": "^1.0.3",
     "web3": "^0.18.4",
