--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wanWallet",
-  "version": "92.1.1",
+  "version": "2.10.0b",
   "license": "GPL-3.0",
   "author": {
     "name": "wanchain wallet Team",
