--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "util": "^0.11.0",
     "uuid": "^3.0.1",
     "wanchain-crosschain": "^0.1.4",
-    "wanchain-crosschain-btc": "git://github.com/wanchain/wanchain-crosschain.git#wanchain30_beta",
+    "wanchain-crosschain-btc": "git://github.com/wanchain/wanchain-crosschain.git#wanchain30_release",
     "wanchain-keystore": "^0.0.1",
     "wanchain-util": "^1.0.3",
     "web3": "^0.18.4",
