--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "underscore-deep-extend": "^1.1.5",
     "util": "^0.11.0",
     "uuid": "^3.0.1",
-    "wanchain-js-sdk":"^1.0.3",
+    "wanchain-js-sdk":"git://github.com/wanchain/wanchain-js-sdk.git#master",
     "wanchain-crosschainbtc": "^1.0.1",
     "wanchain-keystore": "^0.0.1",
     "wanchain-util": "^1.0.3",
