--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "log4js": "^2.10.0",
     "lokijs": "^1.4.3",
     "minimongo-standalone": "^1.1.0-3",
+    "mkdirs-sync": "^1.0.3",
     "moment": "^2.22.2",
     "numeral": "^2.0.6",
     "oboe": "^2.1.3",
@@ -51,8 +52,8 @@
     "underscore-deep-extend": "^1.1.5",
     "util": "^0.11.0",
     "uuid": "^3.0.1",
-    "wanchain-js-sdk":"git://github.com/wanchain/wanchain-js-sdk.git#master",
     "wanchain-crosschainbtc": "^1.0.2",
+    "wanchain-js-sdk": "git://github.com/wanchain/wanchain-js-sdk.git#master",
     "wanchain-keystore": "^0.0.1",
     "wanchain-util": "^1.0.3",
     "web3": "^0.18.4",
