--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "util": "^0.11.0",
     "uuid": "^3.0.1",
     "wanchain-crosschainbtc": "^1.0.7",
+    "wanchain-js-sdk": "github:wanchain/wanchain-js-sdk#btc-support-dev",
     "wanchain-keystore": "^0.0.1",
     "wanchain-util": "^1.0.3",
     "web3": "^0.18.4",
